src/App.scss
::placeholder {
  color: rgba(255, 255, 255, 0.986);
  opacity: 1; /* Firefox */
}
:root {
  --app-corner: 25px;
  --app-line-color: #041955;
}
* {
  box-sizing: border-box;
}
.main-container {
  display: flex;
  justify-content: center;
}
.container {
  position: absolute;
  display: flex;
  width: 400px;
  height: 750px;
  margin: 5rem auto;
  border-radius: var(--app-corner);
  box-shadow: 1px 3px 4px var(--app-line-color);
}
.img-container {
  position: absolute;
  width: inherit;
  height: inherit;
  background-image: url("../public/images/pexels-luis-quintero-2471234.jpg");
  background-position: center;
  background-size: cover;
  filter: blur(15px);
  border-radius: var(--app-corner);
  box-shadow: 1px 3px 4px var(--app-line-color);
}
.user-interface {
  position: relative;
  width: inherit;
  height: inherit;
  display: flex;
  border-radius: var(--app-corner);
  box-shadow: 5px 10px 10px var(--app-line-color);
  display: flex;
  flex-direction: column;
  background: linear-gradient(
    180deg,
    rgba(196, 102, 255, 0.226) 30%,
    rgba(59, 0, 95, 0.712) 70%
  );
}
.header {
  display: flex;
  align-items: center;
  justify-content: space-around;
  font-size: 45px;
  color: var(--app-line-color);
}
.header-title {
  text-shadow: 3px 3px 5px #2c04557f;
  font-weight: 700;
}
.add-btn {
  margin-top: 100px;
  cursor: pointer;
}
.add-btn:hover {
  margin-top: 100px;
  cursor: pointer;
  transition: transform 0.7s ease-in-out;
  transform: rotate(-360deg);
}
.todo-list-container {
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: inherit;
  margin-bottom: auto;
  margin-top: 40px;
}
.todo-item {
  background-color: var(--app-line-color);
  width: 375px;
  display: flex;
  align-items: center;
  justify-content: start;
  margin-top: 10px;
  border: 3px solid var(--app-line-color);
  border-radius: var(--app-corner);
  text-decoration: none;
  .check-btn {
    height: 21.88px;
    width: 21.88px;

    color: rgba(255, 0, 225, 0.642);
    margin-left: 20px;
    background-color: #a509af;
    border-radius: 2px;
    .check-icon {
      display: none;
    }
  }
}

.todo-item:hover {
  border: 3px solid #4b0455;
}
.todo-item.completed {
  text-decoration: line-through;
  color: white;
  .check-btn {
    height: 21.88px;
    width: 21.88px;

    margin-left: 20px;
    background-color: #ffffff00;
    margin-bottom: 3px;
    .check-icon {
      display: flex;
    }
  }
}
.check-btn {
  cursor: pointer;
  font-size: 25px;
  color: rgba(255, 0, 225, 0.642);
  margin-left: 20px;
}
.todo-item-details {
  color: white;
  width: 220px;
  margin-right: 25px;
  margin-left: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  display: flex;
  flex-direction: column;
  .details-title {
    font-size: 20px;
    text-transform: capitalize;
    color: rgb(255, 255, 255);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis !important;
  }
  .details-desc {
    font-size: 18px;
    color: rgb(151, 151, 151);
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis !important;
  }
}
.delete-btn {
 flex-grow: auto;
  cursor: pointer;
  background-color: rgba(255, 0, 225, 0.642);
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  width: 35px;
  height: 35px;
  font-size: 20px;
  justify-self: flex-end;
  margin-left: 5px;
}
.delete-btn:hover {
  width: 40px;
  height: 40px;
  font-size: 30px;
}

.todo-modal-container {
  display: flex;
  position: absolute;
  height: inherit;
  width: inherit;
  background: linear-gradient(
    180deg,
    rgba(196, 102, 255, 0.226) 30%,
    rgba(59, 0, 95, 0.712) 70%
  );
  border-radius: var(--app-corner);

  .todo-form {
    position: relative;
    width: inherit;
    display: flex;
    height: 335px;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    align-self: flex-end;
    border-radius: var(--app-corner);
    background-image: url("../public/images/pexels-luis-quintero-2471234.jpg");
    background-position: center;
    background-size: cover;
    margin: 10px;
    padding: 10px;

    .todo-bg-container {
      position: absolute;
      width: 382px;
      display: flex;
      bottom: 0;
      height: inherit;
      flex-direction: row;
      background: linear-gradient(
        180deg,
        rgba(196, 102, 255, 0.226) 30%,
        rgba(59, 0, 95, 0.712) 70%
      );
      border-radius: var(--app-corner);
    }

    input {
      position: relative;
      height: 50px;
      border-radius: var(--app-corner);
      padding: 25px;
      margin: 5px;
      width: 95%;
      background-color: #041a55b7;
      border: 0;
      box-shadow: inset 3px 3px 3px #041a55b7, inset -3px -3px 3px #041a55ed;
      color: white;
    }
    textarea {
      border: 0;
      box-shadow: inset 6px 6px 6px #041a55b7, inset -6px -6px 6px #041a55ed;
      position: relative;
      width: 342px;
      height: 150px;
      border-radius: var(--app-corner);
      padding: 25px;
      margin: 5px;
      max-width: 342px;
      min-width: 342px;
      max-height: 192px;
      min-height: 192px;
      background-color: #041a55b7;
      color: white;
    }
    .create-btn {
      cursor: pointer;
      box-shadow: inset 6px 6px 6px #041a55b7, inset -6px -6px 6px #041a55ed;
      position: relative;
      margin: 5px;
      display: flex;
      padding: 10px 20px;
      width: 95%;
      font-size: 20px;
      justify-content: center;
      border-radius: var(--app-corner);
      background-color: #041a55b7;
      border: 2px solid;
      color: rgb(232, 155, 253);
    }
    span {
      font-size: 20px;
      margin-left: 15px;
    }
  }
}

.emptyTodoList{
  align-self: center;
  margin-top: 200px;
  font-size: 25px;
  display: flex;
  flex-direction: column;
  align-items: center;
  color:#f896ffbc;
  text-shadow: 3px 3px 5px #a560aa89;
}

